--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-textarea-autosize": "^8.5.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
