--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+				"plugin:styled-components-a11y/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -15,9 +16,11 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "react"
+        "react",
+				"styled-components-a11y"
     ],
     "rules": {
+				"react/prop-types": "off",
 				"react/react-in-jsx-scope": "off",
 				"react/jsx-uses-react": "off",
         "indent": [
