--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-styled-components-a11y": "^2.1.31",
     "jsdom": "^23.0.1",
     "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1",
