--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.5.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-textarea-autosize": "^8.5.3"
+    "react-redux": "^9.0.4",
+    "react-textarea-autosize": "^8.5.3",
+    "redux": "^5.0.1",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -27,6 +32,9 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
